--- a/app/index.html
+++ b/app/index.html
@@ -81,14 +81,18 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+        <script src="scripts/su_api_sync.js"></script>
         <script src="scripts/templates.js"></script>
         <script src="scripts/services/messages.js"></script>
+        <script src="scripts/services/sudata.js"></script>
         <script src="scripts/services/utils.js"></script>
         <script src="scripts/controllers/signin.js"></script>
         <script src="scripts/controllers/navbar.js"></script>
         <script src="scripts/controllers/export.js"></script>
 
         
+        
+        <script src="scripts/services/subdomain.js"></script>
         <!-- endbuild -->
 </body>
 </html>
